# blog

./: .gitignore  404.html  CNAME  Makefile  index.html  mkdocs.yml  pyproject.toml  retype.yml  robots.txt  sitemap.xml
.github/workflows/: retype.yml
Writing/intro_to_3d_printing/intro_to_3d_printing_part_1/: index.html
Writing/intro_to_3d_printing/intro_to_3d_printing_part_2/: index.html
Writing/intro_to_3d_printing/intro_to_3d_printing_part_3/: index.html
Writing/intro_to_3d_printing/intro_to_3d_printing_part_4/: index.html
config/_default/: config.toml  languages.en.toml  menus.en.toml  params.toml
content/: about.md  software_and_media.md
content/posts/: asciiquarium.md  intro_to_3d_printing_part_2.md  intro_to_3d_printing_part_4.md  my-first-post.md
intro_to_3d_printing/intro_to_3d_printing_part_1/: index.html
intro_to_3d_printing/intro_to_3d_printing_part_2/: index.html
intro_to_3d_printing/intro_to_3d_printing_part_3/: index.html
intro_to_3d_printing/intro_to_3d_printing_part_4/: index.html
old/: mkdocs.yml  pyproject.toml
old/src/: index.md
old/src/Writing/intro_to_3d_printing/: index.yml
old/src/projects/: asciiquarium.md
posts/: index.md
posts/intro_to_3d_printing/: index.yml  intro_to_3d_printing_part_1.md  intro_to_3d_printing_part_2.md  intro_to_3d_printing_part_3.md  intro_to_3d_printing_part_4.md
posts/projects/: asciiquarium.md  index.yml
projects/asciiquarium/: index.html
resources/js/: config.js  search.json
search/: search_index.json
src/: CNAME
src/projects/: asciiquarium.md
static/: readme.md
(+4 files in other folders)
