[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Joe Kaufeld <oensource@joekaufeld.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.8"
mkdocs-minify-plugin = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
